# PWAsForFirefox

./: .editorconfig  .gitattributes  .gitignore  README.md  append.txt  crowdin.yml
.github/: CONTRIBUTING.md  FUNDING.yml  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docs.yaml  extension.yaml  native.yaml
docs/: README.md  mkdocs.yml  requirements.in  requirements.txt
docs/docs/: _headers  index.md  robots.txt
docs/docs/about/: contributing.md  current-limitations.md  how-it-works.md  privacy-policy.md  supported-features.md
docs/docs/assets/: site.webmanifest
docs/docs/assets/javascripts/: feedback.js  statistics.js
docs/docs/assets/stylesheets/: theme.css
docs/docs/en/: index.md
docs/docs/en/about/: privacy-policy.md  supported-features.md
docs/docs/en/help/: troubleshooting.md
docs/docs/en/installation/: extension.md  native.md  requirements.md  updates.md
docs/docs/en/resources/: profile-properties.md
docs/docs/en/user-guide/: browser.md  extension.md
docs/docs/help/: faq.md  support.md  troubleshooting.md
docs/docs/installation/: browser.md  install.md  native.md  requirements.md  updates.md
docs/docs/resources/: faq.md  installation-directories.md  known-problems.md  profile-properties.md  specific-website-tips.md  troubleshooting.md  web-app-properties.md
docs/docs/ru/: index.md
docs/docs/ru/about/: contributing.md  current-limitations.md  how-it-works.md  privacy-policy.md  supported-features.md
docs/docs/ru/help/: faq.md  support.md  troubleshooting.md
docs/docs/ru/installation/: extension.md  native.md  requirements.md  updates.md
docs/docs/ru/resources/: installation-directories.md  profile-properties.md  specific-website-tips.md  web-app-properties.md
docs/docs/ru/user-guide/: browser.md  console.md  extension.md
docs/docs/user-guide/: browser.md  console.md  extension.md
docs/hooks/: breadcrumbs.py  faq.py  home.py
docs/layouts/: variant.yml
docs/overrides/: 404.html  main.html
extension/: .browserlistrc  .browserslistrc  .eslintrc  .parcelrc  README.md  package-lock.json  package.json  set-version.js
extension/icons/: _css.hbs  _scss.hbs  generate.js
extension/src/: background.js  content.js  errors.js  i18n.js  manifest.json  routerScope.js  utils.js
extension/src/_locales/en/: messages.json
extension/src/_locales/fr/: messages.json
extension/src/_locales/id/: messages.json
extension/src/_locales/ja/: messages.json
extension/src/_locales/pt-BR/: messages.json
extension/src/setup/: install.html  install.js  install.scss  instructions.html  instructions.js  instructions.scss  setup.scss  update.html  update.js  update.scss
extension/src/sites/: categories.js  install.html  install.js  install.scss  launch.html  launch.js  launch.scss  manage.html  manage.js  manage.scss  popup.scss
extension/src/styles/: bootstrap.css  bootstrap.scss
extension/src/utils/: i18n.js  i18nHtml.js
extension/tools/: set-version.js
extension/tools/icons/: generate.js
extension/tools/transformers/: filename.js  locale.js  treeshake.js
native/: Cargo.toml  Makefile.toml  README.md  build.rs  rustfmt.toml  set-version.ds
native/bindings/: Cargo.toml  build.rs
native/debian/: description  postinst  postrm
native/manifests/: linux.json  macos.json  termux.json  windows.json
native/scripts/: manifest.scm  set-version.ds
native/src/: directories.rs  lib.rs  main.rs  storage.rs  utils.rs
native/src/components/: _7zip.rs  mod.rs  profile.rs  runtime.rs  site.rs
native/src/connector/: mod.rs  process.rs  request.rs  response.rs
native/src/console/: app.rs  mod.rs  profile.rs  runtime.rs  site.rs
native/src/integrations/: categories.rs  linux.rs  macos.rs  mod.rs  utils.rs  windows.rs  xdg.rs
native/src/integrations/implementation/: linux.rs  macos.rs  mod.rs  portableapps.rs  windows.rs
native/userchrome/profile/chrome/pwa/: boot.jsm  boot.sys.mjs  chrome.jsm  chrome.manifest  chrome.sys.mjs
native/userchrome/profile/chrome/pwa/content/: browser.css  browser.jsm  browser.load.js  browser.sys.mjs  macosHiddenWindow.jsm  macosHiddenWindow.load.js  macosHiddenWindow.sys.mjs  preferences.css  preferences.jsm  preferences.load.js  preferences.sys.mjs  pwa.css  pwa.jsm
native/userchrome/profile/chrome/pwa/localization/en-US/pwa/: appmenu.ftl  browser.ftl  contextmenu.ftl  customizemode.ftl  preferences.ftl  widgets.ftl
native/userchrome/profile/chrome/pwa/localization/fr/pwa/: customizemode.ftl
native/userchrome/profile/chrome/pwa/localization/id-ID/pwa/: appmenu.ftl
native/userchrome/profile/chrome/pwa/localization/id/pwa/: appmenu.ftl  preferences.ftl  widgets.ftl
native/userchrome/profile/chrome/pwa/localization/ja/pwa/: browser.ftl  contextmenu.ftl  customizemode.ftl  preferences.ftl  widgets.ftl
native/userchrome/profile/chrome/pwa/localization/pt-BR/pwa/: appmenu.ftl  browser.ftl  contextmenu.ftl  customizemode.ftl  preferences.ftl  widgets.ftl
native/userchrome/profile/chrome/pwa/localization/ru/pwa/: appmenu.ftl  browser.ftl  contextmenu.ftl  customizemode.ftl  preferences.ftl  widgets.ftl
native/userchrome/profile/chrome/pwa/localization/sl/pwa/: appmenu.ftl  browser.ftl  contextmenu.ftl  customizemode.ftl  preferences.ftl  widgets.ftl
native/userchrome/profile/chrome/pwa/localization/uk/pwa/: contextmenu.ftl
native/userchrome/profile/chrome/pwa/localization/zh-CN/pwa/: appmenu.ftl  browser.ftl  contextmenu.ftl  customizemode.ftl  preferences.ftl  widgets.ftl
native/userchrome/profile/chrome/pwa/localization/zh-TW/pwa/: browser.ftl  contextmenu.ftl  customizemode.ftl
native/userchrome/profile/chrome/pwa/utils/: common.jsm  common.sys.mjs  hookFunction.jsm  hookFunction.sys.mjs  nativeMessaging.jsm  nativeMessaging.sys.mjs  systemIntegration.jsm  systemIntegration.sys.mjs  xPref.jsm  xPref.sys.mjs
native/userchrome/runtime/: _autoconfig.cfg
native/userchrome/runtime/defaults/pref/: autoconfig.js
native/wix/: main.wxs
native/wix/assets/: license.rtf
native/wix/utils/: config.wxi  transform.xslt
(+5 files in other folders)
