[package]
name = "firefoxpwa"
description = "The native part of the PWAsForFirefox project"
keywords = ["firefox", "progressive-web-app", "site-specific-browser", "pwa"]
categories = ["command-line-utilities"]
authors = ["filips <projects@filips.si>"]
homepage = "https://github.com/filips123/PWAsForFirefox"
repository = "https://github.com/filips123/PWAsForFirefox"
default-run = "firefoxpwa"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
publish = false

# Version will be set by CI from the Git tag when building and releasing
version = "0.0.0"

[profile.release]
codegen-units = 1
lto = true

[features]
portable = ["phf"]

[dependencies]
ab_glyph = "0.2.18"
anyhow = "1.0.68"
byteorder = "1.4.3"
cfg-if = "1.0.0"
clap = { version = "4.0.32", features = ["derive"] }
configparser = "3.0.2"
const_format = "0.2.30"
data-url = { git = "https://github.com/filips123/rust-url", branch = "impl-std-error" }
directories = "4.0.1"
fs_extra = "1.3.0"
gag = "1.0.0"
image = "0.24.5"
log = "0.4.17"
reqwest = { version = "0.11.17", features = ["blocking", "socks", "gzip", "brotli", "deflate", "native-tls"] }
resvg = "0.27.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
simplelog = "0.12.0"
smart-default = "0.6.0"
tempfile = "3.4.0"
ulid = { version = "1.0.0", features = ["serde"] }
url = "2.3.1"
urlencoding = "2.1.2"
web_app_manifest = { git = "https://github.com/filips123/WebAppManifestRS", branch = "main" }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10.1"
sanitize-filename = "0.4.0"
phf = { version = "0.11.1", features = ["macros"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_EnhancedStorage",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem"
]

[target.'cfg(target_os = "linux")'.dependencies]
bzip2 = "0.4.4"
glob = "0.3.0"
phf = { version = "0.11.1", features = ["macros"] }
tar = "0.4.38"

[target.'cfg(target_os = "macos")'.dependencies]
dmg = "0.1.2"
phf = { version = "0.11.1", features = ["macros"] }
icns = "0.3.1"
pix = "0.13.2"
plist = "1.4.0"
sanitize-filename = "0.4.0"

[build-dependencies]
clap = { version = "4.0.32", features = ["derive"] }
clap_complete = "4.0.7"
ulid = "1.0.0"
url = "2.3.1"

[package.metadata.wix]
include = [
    "packages/wix/main.wxs",
    "packages/wix/userchrome.wxs"
]

[package.metadata.deb]
section = "web"
priority = "optional"
recommends = "firefox | firefox-esr | firefox-beta | firefox-trunk"
enhances = "firefox, firefox-esr, firefox-beta, firefox-trunk"
maintainer-scripts = "packages/deb"
extended-description-file = "packages/deb/description"
license-file = "packages/deb/copyright"
assets = [
    # Executables
    ["target/release/firefoxpwa", "/usr/bin/firefoxpwa", "755"],
    ["target/release/firefoxpwa-connector", "/usr/libexec/firefoxpwa-connector", "755"],

    # Manifests
    ["manifests/linux.json", "/usr/lib/mozilla/native-messaging-hosts/firefoxpwa.json", "644"],
    ["manifests/linux.json", "/usr/lib64/mozilla/native-messaging-hosts/firefoxpwa.json", "644"],

    # Completions
    ["target/release/completions/firefoxpwa.bash", "/usr/share/bash-completion/completions/firefoxpwa", "644"],
    ["target/release/completions/firefoxpwa.fish", "/usr/share/fish/vendor_completions.d/firefoxpwa.fish", "644"],
    ["target/release/completions/_firefoxpwa", "/usr/share/zsh/vendor-completions/_firefoxpwa", "644"],

    # Documentation
    ["../README.md", "/usr/share/doc/firefoxpwa/README.md", "644"],
    ["../native/README.md", "/usr/share/doc/firefoxpwa/README-NATIVE.md", "644"],
    ["../extension/README.md", "/usr/share/doc/firefoxpwa/README-EXTENSION.md", "644"],

    # UserChrome
    ["userchrome/**/*", "/usr/share/firefoxpwa/userchrome/", "644"],
]

[package.metadata.rpm]
cargo = { buildflags = ["--release"] }
config = "packages/rpm/"
output = "target/rpm/"

[package.metadata.rpm.targets]
firefoxpwa = { path = "/usr/bin/firefoxpwa" }
firefoxpwa-connector = { path = "/usr/libexec/firefoxpwa-connector" }

[package.metadata.rpm.files]
"../../manifests/linux.json" = { path = "/usr/lib/mozilla/native-messaging-hosts/firefoxpwa.json" }
"../../target/release/completions/firefoxpwa.bash" = { path = "/usr/share/bash-completion/completions/firefoxpwa" }
"../../target/release/completions/firefoxpwa.fish" = { path = "/usr/share/fish/vendor_completions.d/firefoxpwa.fish" }
"../../target/release/completions/_firefoxpwa" = { path = "/usr/share/zsh/vendor-completions/_firefoxpwa" }
"../../../README.md" = { path = "/usr/share/doc/firefoxpwa/README.md" }
"../../../native/README.md" = { path = "/usr/share/doc/firefoxpwa/README-NATIVE.md" }
"../../../extension/README.md" = { path = "/usr/share/doc/firefoxpwa/README-EXTENSION.md" }
"../deb/copyright" = { path = "/usr/share/doc/firefoxpwa/copyright" }
"../../userchrome/" = { path = "/usr/share/firefoxpwa/userchrome/" }
