[package]
name = "firefoxpwa"
description = "The native part of the PWAsForFirefox project"
keywords = ["firefox", "progressive-web-app", "site-specific-browser", "pwa"]
categories = ["command-line-utilities"]
authors = ["filips <projects@filips.si>"]
homepage = "https://pwasforfirefox.filips.si/"
repository = "https://github.com/filips123/PWAsForFirefox"
default-run = "firefoxpwa"
readme = "README.md"
license = "MPL-2.0"
edition = "2021"
publish = false

# Version will be set by CI from the Git tag when building and releasing
version = "0.0.0"

[profile.release]
codegen-units = 1
lto = true

[features]
portable = ["dep:phf"]
static = ["reqwest/native-tls-vendored", "bzip2/static"]

[dependencies]
ab_glyph = "0.2.22"
anyhow = "1.0.75"
byteorder = "1.4.3"
cfg-if = "1.0.0"
clap = { version = "^4.4.6", features = ["derive"] }
configparser = "3.0.2"
const_format = "0.2.31"
data-url = { git = "https://github.com/servo/rust-url", branch = "master" }
directories = "5.0.1"
fs_extra = "1.3.0"
gag = "1.0.0"
image = "0.24.7"
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["blocking", "socks", "gzip", "brotli", "deflate", "native-tls"] }
resvg = "0.35.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.3.0"
simplelog = "0.12.1"
smart-default = "0.7.1"
tempfile = "3.8.0"
ulid = { version = "1.1.0", features = ["serde"] }
url = "2.4.1"
urlencoding = "2.1.3"
web_app_manifest = { git = "https://github.com/filips123/WebAppManifestRS", branch = "main" }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.50.0"
sanitize-filename = "0.5.0"
phf = { version = "0.11.2", features = ["macros"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_Storage_EnhancedStorage",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem"
]

[target.'cfg(target_os = "linux")'.dependencies]
bzip2 = "0.4.4"
glob = "0.3.1"
phf = { version = "0.11.2", features = ["macros"] }
tar = "0.4.40"

[target.'cfg(target_os = "macos")'.dependencies]
dmg = "0.1.2"
phf = { version = "0.11.2", features = ["macros"] }
icns = "0.3.1"
pix = "0.13.3"
plist = "1.5.0"
sanitize-filename = "0.5.0"

[build-dependencies]
clap = { version = "4.4.6", features = ["derive"] }
clap_complete = "4.4.3"
ulid = "1.1.0"
url = "2.4.1"

[package.metadata.wix]
include = [
    "packages/wix/main.wxs",
    "packages/wix/userchrome.wxs"
]

[package.metadata.deb]
section = "web"
priority = "optional"
recommends = "firefox | firefox-esr | firefox-beta | firefox-trunk"
enhances = "firefox, firefox-esr, firefox-beta, firefox-trunk"
maintainer-scripts = "packages/deb"
extended-description-file = "packages/deb/description"
license-file = "packages/deb/copyright"
revision = ""
assets = [
    # Executables
    ["target/release/firefoxpwa", "/usr/bin/firefoxpwa", "755"],
    ["target/release/firefoxpwa-connector", "/usr/libexec/firefoxpwa-connector", "755"],

    # Manifests
    ["manifests/linux.json", "/usr/lib/mozilla/native-messaging-hosts/firefoxpwa.json", "644"],
    ["manifests/linux.json", "/usr/lib64/mozilla/native-messaging-hosts/firefoxpwa.json", "644"],

    # Completions
    ["target/release/completions/firefoxpwa.bash", "/usr/share/bash-completion/completions/firefoxpwa", "644"],
    ["target/release/completions/firefoxpwa.fish", "/usr/share/fish/vendor_completions.d/firefoxpwa.fish", "644"],
    ["target/release/completions/_firefoxpwa", "/usr/share/zsh/vendor-completions/_firefoxpwa", "644"],

    # UserChrome
    ["userchrome/**/*", "/usr/share/firefoxpwa/userchrome/", "644"],

    # Documentation
    ["../README.md", "/usr/share/doc/firefoxpwa/README.md", "644"],
    ["../native/README.md", "/usr/share/doc/firefoxpwa/README-NATIVE.md", "644"],
    ["../extension/README.md", "/usr/share/doc/firefoxpwa/README-EXTENSION.md", "644"],

    # AppStream Metadata
    ["packages/appstream/si.filips.FirefoxPWA.metainfo.xml", "/usr/share/metainfo/si.filips.FirefoxPWA.metainfo.xml", "644"],
    ["packages/appstream/si.filips.FirefoxPWA.svg", "/usr/share/icons/hicolor/scalable/apps/si.filips.FirefoxPWA.svg", "644"],
]

[package.metadata.rpm]
cargo = { buildflags = ["--release"] }
config = "packages/rpm/"
output = "target/rpm/"

[package.metadata.rpm.targets]
firefoxpwa = { path = "/usr/bin/firefoxpwa" }
firefoxpwa-connector = { path = "/usr/libexec/firefoxpwa-connector" }

[package.metadata.rpm.files]
"../../manifests/linux.json" = { path = "/usr/lib/mozilla/native-messaging-hosts/firefoxpwa.json" }
"../../target/release/completions/firefoxpwa.bash" = { path = "/usr/share/bash-completion/completions/firefoxpwa" }
"../../target/release/completions/firefoxpwa.fish" = { path = "/usr/share/fish/vendor_completions.d/firefoxpwa.fish" }
"../../target/release/completions/_firefoxpwa" = { path = "/usr/share/zsh/vendor-completions/_firefoxpwa" }
"../../userchrome/" = { path = "/usr/share/firefoxpwa/userchrome/" }
"../../../README.md" = { path = "/usr/share/doc/firefoxpwa/README.md" }
"../../../native/README.md" = { path = "/usr/share/doc/firefoxpwa/README-NATIVE.md" }
"../../../extension/README.md" = { path = "/usr/share/doc/firefoxpwa/README-EXTENSION.md" }
"../deb/copyright" = { path = "/usr/share/doc/firefoxpwa/copyright" }
"../appstream/si.filips.FirefoxPWA.metainfo.xml" = { path = "/usr/share/metainfo/si.filips.FirefoxPWA.metainfo.xml" }
"../appstream/si.filips.FirefoxPWA.svg" = { path = "/usr/share/icons/hicolor/scalable/apps/si.filips.FirefoxPWA.svg" }
